--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@heroicons/react": "^2.1.3",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
     "react": "^18",
